# openapi.json
@@ -61,6 +61,13 @@
             "type": "string",
             "nullable": true
           },
+          "searchParams": {
+            "type": "object",
+            "nullable": true,
+            "additionalProperties": {
+              "nullable": true
+            }
+          },
           "maxBudgetDailyUsd": {
             "type": "string",
             "nullable": true
@@ -126,6 +133,7 @@
           "targetAudience",
           "targetOutcome",
           "valueForTarget",
+          "searchParams",
           "maxBudgetDailyUsd",
           "maxBudgetWeeklyUsd",
           "maxBudgetMonthlyUsd",
@@ -187,6 +195,12 @@
             "type": "string",
             "minLength": 1
           },
+          "searchParams": {
+            "type": "object",
+            "additionalProperties": {
+              "nullable": true
+            }
+          },
           "maxBudgetDailyUsd": {
             "type": "string"
           },
@@ -223,9 +237,7 @@
           "workflowName",
           "orgId",
           "brandUrl",
-          "brandId",
-          "targetOutcome",
-          "valueForTarget"
+          "brandId"
         ]
       },
       "UpdateCampaignBody": {
@@ -251,6 +263,12 @@
           "valueForTarget": {
             "type": "string",
             "minLength": 1
+          },
+          "searchParams": {
+            "type": "object",
+            "additionalProperties": {
+              "nullable": true
+            }
           },
           "maxBudgetDailyUsd": {
             "type": "string"
